Fixed some spacing stuff.

--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ h3 {
 margin: 0;}
 
 .B1 {padding: 0px 24px;}
-.B2 {padding: 0px 10px;}
+.Blaptop {padding: 0px 12px;}
+.B2 {padding: 0px 8px;}
 .B3 {padding: 0px 8px;}
 
 /* this styles how the links appear on your webpage */
@@ -100,7 +101,7 @@ cursor: pointer;
 .button3 {border-radius: 8px;}
 .button4 {border-radius: 12px;}
 .button5 {border-radius: 50%;}
-.button6 {text-align: center; border-radius: 0px;height: 35px; width: 100%; border: 0px ;}
+.button6 {text-align: left; border-radius: 0px;height: 35px; width: 100%; border: 0px ;}
 .button7 {border-radius: 12px;height: 40px; width: 100%; border: 2px solid #003366;}
 .button8 {padding: 0px 11px; border-radius: 20px;height: 35px; width: 100%; border: 0px; color: #003366;}
 .button9 {border-radius: 12px;height: 35px; width: 95%; border: 2px solid #003366; color: #003366;}
@@ -133,12 +134,24 @@ a.big-link:before{
 float: left;
 }
 
+.columnright {
+	float: right;
+	}
+
 .padding {
 	padding: 1% 0%;
 }
 
 .padding2 {
-	padding: 0% 5%;
+	padding: 0% 60px;
+}
+
+.paddinglaptop {
+	padding: 0% 40px;
+}
+
+.padding3 {
+	padding: 0% 3%;
 }
 
 .paddingimpressumg {
@@ -182,18 +195,18 @@ width: 37%;
 }
 
 .left120 {
-padding: 0 4px;
-text-align: center;
+padding: 0px 4px;
+text-align: left;
 }
 
 .right120{
-	padding: 0 2pt;
-	text-align: center;
+	padding: 0 4px;
+	text-align: right;
 }
 
 .left100pt {
-	padding: 0 4px;
-	text-align: center;
+	padding: 0px 4px;
+	text-align: left;
 	}
 
 .right100pt {
@@ -253,55 +266,64 @@ clear: both;
 
 /* This forces the container to adapt to the window size; i.e. makes the webpage somehow 'adaptive' to the device you use. */
 
-@media all and (min-width: 1250px) {
+@media all and (min-width: 1150px) {
 	.desktop-opening {
 display: none;
 }
 }
 
-@media all and (min-width: 950px) and (max-width: 1249px){
+@media all and (min-width: 901px) and (max-width: 1149px){
 	.laptop-opening {
 	display: none;
 	}
 	}
 
-@media all and (min-width: 621px) and (max-width: 949px){
+@media all and (min-width: 701px) and (max-width: 900px){
 	.ipad-opening {
 	display: none;
 	}
 	}
 
-@media all and (max-width: 620px) {
+@media all and (max-width: 700px) {
 	.mobile-opening  {
 display: none;
 }
 }
 
-@media all and (min-width: 621px) {
+@media all and (min-width: 701px) {
 .hide-on-desktop-footer {
 display: none;
 }
 }
 
-@media all and (max-width: 620px) {
+@media all and (max-width: 700px) {
 .show-on-desktop-footer  {
 display: none;
 }
 }
 
-@media all and (min-width:1250px)  							{ html { font-size: 16px; } Footer{ font-size:14px; } #container {width: 1150px; margin: 0 auto;} body {background: url('chalkboard.jpg'); background-attachment: fixed;}}
-@media all and (min-width:950px)  and (max-width:1249px) 	{ html { font-size: 16px; } Footer{ font-size:14px; } #container {width: 950px; margin: 0 auto;} body {background: url('chalkboard.jpg'); background-attachment: fixed;}}
-@media all and (min-width:621px)  and (max-width:949px) 	{ html { font-size: 14px; } Footer{ font-size:13px; } #container {margin-left: 0%; margin-right: 0%;} body {background-color: #F4F0EC}}
-@media all and (max-width:620px)                        	{ html { font-size: 14px; } Footer{ font-size:13px; } #container {margin-left: 0%; margin-right: 0%;} body {background-color: #F4F0EC}}
+@media all and (min-width:1150px)  							{ html { font-size: 16px; } Footer{ font-size:14px; } #container {width: 1150px; margin: 0 auto;} body {background: url('chalkboard.jpg'); background-attachment: fixed;}}
+@media all and (min-width:901px)  and (max-width:1149px) 	{ html { font-size: 16px; } Footer{ font-size:14px; } #container {width: 900px; margin: 0 auto;} body {background: url('chalkboard.jpg'); background-attachment: fixed;}}
+@media all and (min-width:701px)  and (max-width:900px) 	{ html { font-size: 14px; } Footer{ font-size:13px; } #container {margin-left: 0%; margin-right: 0%;} body {background-color: #F4F0EC}}
+@media all and (max-width:700px)                        	{ html { font-size: 14px; } Footer{ font-size:13px; } #container {margin-left: 0%; margin-right: 0%;} body {background-color: #F4F0EC}}
 
 
 .overlay-text{
 	padding:4px 0px;
-	text-align:center;
+	text-align:left;
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
-	left: -29px;
+	left: 32px;
+  }
+
+.overlay-text-laptop{
+	padding:4px 0px;
+	text-align:left;
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	left: 22px;
   }
 
 .overlay-text-name{
@@ -315,11 +337,20 @@ display: none;
 
   .overlay-text-namedesktop{
 	background-color:rgba(255, 255, 255, 0.5);
-	padding: 0px 25px;
+	padding: 0px 24px;
 	text-align:left;
 	position: absolute;
 	bottom: 51px;
-	left: 32.5px;
+	left: 36px;
+  }
+
+  .overlay-text-namelaptop{
+	background-color:rgba(255, 255, 255, 0.5);
+	padding: 0px 14px;
+	text-align:left;
+	position: absolute;
+	bottom: 51px;
+	left: 26px;
   }
 
 .overlay-text-email{
@@ -331,21 +362,21 @@ display: none;
   }
 
 .overlay-text-email-desktop{
-	padding:4px 5%;
-	text-align:center;
+	padding:4px 0px;
 	position: absolute;
+	text-align:right;
 	bottom: 0;
-	width: 30%;
-	right: -66px;
+	width: 26%;
+	right: 45px;
   }
 
 .overlay-text-email-laptop{
-	padding:4px 5%;
-	text-align:center;
+	padding:4px 0px;
 	position: absolute;
+	text-align:right;
 	bottom: 0;
-	width: 30%;
-	right: -28px;
+	width: 26%;
+	right: 25px;
   }
 
 .overlay-text-orcid{
@@ -388,7 +419,7 @@ display: none;
 	text-align:left;
 	position: absolute;
 	bottom: 85px;
-	left: 5%;
+	left: 3%;
   }
 
 .overlay-text-email-mobile{
@@ -409,11 +440,11 @@ display: none;
 
 .overlay-text-ipad{
 	padding:4px 0px;
-	text-align:center;
+	text-align:left;
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
-	left: -4px;
+	left: 46px;
   }
 
 .overlay-text-nameiPad{
@@ -422,7 +453,7 @@ display: none;
 	text-align:center;
 	position: absolute;
 	bottom: 53px;
-	left: 5%;
+	left: 50px;
   }
 
 .overlay-text-email-ipad{
